// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div>
  <h2
    data-testid="usersTitle"
  >
    Users (
    0
    )
  </h2>
  <div
    className="table-responsive"
  >
    <table
      className="table table-bordered"
    >
      <thead>
        <tr>
          <th>
            #
          </th>
          <th>
            Username
          </th>
          <th>
            Date
          </th>
        </tr>
      </thead>
      <tbody />
    </table>
  </div>
</div>
`;

exports[`test 1`] = `
<div>
  <h2>
    Users (
    0
    )
  </h2>
  <div
    className="table-responsive"
  >
    <table
      className="table table-bordered"
    >
      <thead>
        <tr>
          <th>
            #
          </th>
          <th>
            Username
          </th>
          <th>
            Date
          </th>
        </tr>
      </thead>
      <tbody />
    </table>
  </div>
</div>
`;
